# Codex-ChatGPT-Bridge-Skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  capability_failed.yml  connector_failed.yml  feature_request.yml  security_report.yml  setup_failed.yml
.github/workflows/: ci.yml
bridge/: __init__.py  audit.py  capabilities.py  cli_encoding.py  codex_config.py  errors.py  limits.py  lock.py  mcp_protocol.py  ordinary_journey.py  public_mcp_proxy.py  redaction.py  registry.py  schema_status.py  schemas.py  secret_scan.py  security.py  server.py  state.py  stdio_server.py  tools.py
docs/: chatgpt-prompt-templates.zh-CN.md  connector-setup.zh-CN.md  examples.zh-CN.md  first-run.zh-CN.md  manual-mode.zh-CN.md  quickstart.zh-CN.md  security.zh-CN.md  troubleshooting.zh-CN.md
examples/demo-node-project/: README.md  index.js  index.test.js  package.json
scripts/: build_authorized_browser_session_plan.py  build_chatgpt_browser_assist_packet.py  build_chatgpt_collaboration_message.py  build_chatgpt_collaboration_session.py  codex_bridge_stdio_mcp.py  intake_chatgpt_result.py
tests/: __init__.py  helpers.py  test_bridge_health.py  test_chatgpt_collaboration_message.py  test_fallback_and_capability.py  test_http_auth.py  test_intake_chatgpt_result.py  test_mcp_protocol.py  test_path_safety.py  test_push_task_confirmation.py  test_redaction.py  test_review_result.py  test_secret_scan.py  test_task_flow.py  test_tool_schemas.py
(+38 files in other folders)
